--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,14 @@ services:
       NAME: "rabbitmq"
     volumes:
       - rabbit_data:/var/lib/rabbitmq
+  storage:
+    image: storage
+    hostname: storage
+    build: ./storage
+    ports:
+      - 6001:6001
+    volumes:
+      - storage_data:/home/node/app/storage
   analyze_docx:
     image: analyze_docx
     hostname: analyze_docx
@@ -66,4 +74,6 @@ volumes:
   rabbit_data:
     driver: local
   esdata:
+    driver: local
+  storage_data:
     driver: local
