--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - discovery.type=single-node
       - bootstrap.memory_lock=true # along with the memlock settings below, disables swapping
-      - "ES_JAVA_OPTS=-Xms1g -Xmx1g" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
+      - "ES_JAVA_OPTS=-Xms256m -Xmx256m" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
     ulimits:
       memlock:
         soft: -1
@@ -42,6 +42,12 @@ services:
       NAME: "rabbitmq"
     volumes:
       - rabbit_data:/var/lib/rabbitmq
+  back:
+    image: back
+    hostname: back
+    build: ./back
+    ports:
+      - 6002:6002
   storage:
     image: storage
     hostname: storage
