--- a/analyze_docx/pom.xml
+++ b/analyze_docx/pom.xml
@@ -69,6 +69,12 @@
             <version>2.7.5</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.9.0</version>
+        </dependency>
 
 
     </dependencies>
