--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,9 @@ services:
       - esdata:/usr/share/elasticsearch/data
   kibana:
     restart: always
-    image: amazon/opendistro-for-elasticsearch-kibana:1.6.0
+    image: kibana
     hostname: kibana
+    build: ./kibana
     ports:
       - 5601:5601
     expose:
